--- a/ninjira-timeline/src/index.html
+++ b/ninjira-timeline/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NinjiraTimeline</title>
+  <title>Ninjira Timeline</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <div id="loader-wrapper">
+	<div class="loader-section section-left"></div>
+	<div class="loader-section section-right"></div>
+	<div id="loader"></div>
+  </div>
 </body>
 </html>
